fix: tailwind v4 dark mode variant definition in CSS

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -111,3 +111,15 @@
   --wrapper-width: clamp(16rem, 93vw, 77.5rem);
   --gutter: var(--spacing-s-m);
 }
+
+@custom-variant dark {
+  @media (prefers-color-scheme: dark) {
+    &:not(.light *) {
+      @slot;
+    }
+  }
+
+  &:is(.dark *) {
+    @slot;
+  }
+}
